# elastio_task

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  prompt_agent.rs
src/provider/: mod.rs  open_weather_api.rs  open_weather_map.rs  weather_api.rs
