[package]
name = "elastio_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
dotenvy = "0.15.7"
regex = "1.7.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
strum = { version = "0.24.1", features = ["derive"]}
strum_macros = "0.24.3"
